--- a/client/src/components/CardCatalogue.css
+++ b/client/src/components/CardCatalogue.css
@@ -1,19 +1,11 @@
-.cards__container{
-    display: flex;
-    align-items:center;
-    width: 100%;
-    height: 100%;
-    margin: 0 auto;
+.container{
+  display: flex;
+  flex-wrap: wrap;
+  align-items:center;
+  width: 100%;
+  height: 100%;
   }
-  
-  .cards__wrapper{
-    width: 100%;
-    flex-flow: row;
-    position: relative;
-    margin: 50px 0 45px;
-  }
-  
-  .cards__items{
-    list-style-type: none;
-    margin: 0 1rem;
-  }
+.item{
+  list-style-type: none;
+  margin: 0 1rem;
+}
