--- a/client/src/components/CardItem.css
+++ b/client/src/components/CardItem.css
@@ -23,6 +23,7 @@
     width:90%;
     height:fit-content;
     margin: 8px;
+    border-radius: 5px;
     border-width: 4px;
     border-style: solid;
     border-color: black;
@@ -31,9 +32,10 @@
     position: relative;
     width: 100%;
     overflow: hidden;
-    border-width: 4px;
+    border-width: 0px;
+    border-bottom-width: 4px;
     border-bottom: black;
-    border-bottom-color: black;   
+    border-style: solid;
 }
 
 .card__item__img{
