--- a/client/src/components/CardCatalogue.css
+++ b/client/src/components/CardCatalogue.css
@@ -1,4 +1,5 @@
 .container{
+  padding-top: 1rem;
   display: flex;
   flex-wrap: wrap;
   align-items:center;
@@ -7,5 +8,5 @@
   }
 .item{
   list-style-type: none;
-  margin: 0 1rem;
+  margin: 1rem;
 }
