--- a/client/src/components/Modal.css
+++ b/client/src/components/Modal.css
@@ -14,6 +14,7 @@
     flex-flow: column;
     justify-content: flex-start;
     width: 550px;
+    min-height: 250px;
     box-shadow: 3px 5px 7px rgba(0,0,0,0.5);
     border: 3px solid white;
     border-style: solid;
@@ -25,9 +26,10 @@
     width:100%;
     display: flex;
     flex-flow: row;
+    height:fit-content;
 }
     .full__card__pic-wrap{
-        height: fit-content;
+        height:90px;
     }
     .full__card__img{
         width: 90px;
@@ -76,3 +78,15 @@
         font-family:fantasy;
         background: red;
     }
+
+
+
+.full__card__filler{
+    width: 100%;
+    height: 100%;
+    border-width: 0px;
+    border-top-width: 4px;
+    border-color: darkslategray;
+    border-style: solid;
+}
+    
